--- a/src/styles/HeaderImg.css
+++ b/src/styles/HeaderImg.css
@@ -1,7 +1,8 @@
 .HeaderImg {
-  position:absolute;
+  position: absolute;
   height: 220px;
   width: 20px;
   width: 400px;
   left: 30%;
+  overflow: hidden;
 }
